--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "silex/silex":"1.0.*",
         "symfony/security":"2.1.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "autoload":{
         "psr-0":{
             "Mrok":"src/"
