--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,12 @@
     "minimum-stability":"dev",
     "require":{
         "silex/silex":"1.0.*",
-        "symfony/security":"2.1.*"
+        "symfony/security":"2.1.*",
+        "doctrine/dbal": "2.2.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "symfony/browser-kit": "2.1.*"
     },
     "autoload":{
         "psr-0":{
