--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "silex/silex":"1.0.*",
         "symfony/security":"2.1.*",
         "symfony/validator": "2.1.*",
+        "symfony/yaml": "2.1.*",
         "doctrine/dbal": "2.2.*"
     },
     "require-dev": {
