--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/security":"2.1.*",
         "symfony/validator": "2.1.*",
         "symfony/yaml": "2.1.*",
+        "twig/twig": ">=1.8,<2.0-dev",
         "videlalvaro/php-amqplib" : "master",
         "doctrine/dbal": "2.2.*"
     },
