--- a/app/configuration/validation.yml
+++ b/app/configuration/validation.yml
@@ -18,3 +18,6 @@ Mrok\Entity\Movie:
     filePath:
       - NotNull: ~
       - NotBlank: ~
+    customerName:
+      - NotNull: ~
+      - NotBlank: ~
