--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: php
 
-before_script: composer install --dev
-
+before_script:
+  - composer install --dev
+  - mysql -e 'create database sql/db.sql;'
 script: ./vendor/bin/phpunit
+
+services: mysql
 
 php:
   - 5.3
